--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "firebase": "^8.6.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dropdown": "^1.9.2",
     "react-redux": "^7.2.3",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "react-select": "^4.3.1",
+    "unirest": "^0.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
