--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dropdown": "^1.9.2",
+    "react-fade-in": "^2.0.1",
+    "react-loading-skeleton": "^2.2.0",
     "react-redux": "^7.2.3",
     "react-scripts": "4.0.3",
     "react-select": "^4.3.1",
+    "react-spinners-kit": "^1.9.1",
     "unirest": "^0.6.0"
   },
   "scripts": {
