--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "4.0.3",
     "react-select": "^4.3.1",
     "react-spinners-kit": "^1.9.1",
+    "scss": "^0.2.4",
     "unirest": "^0.6.0"
   },
   "scripts": {
